--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Taller3ICM">
 
-        <!-- Google Maps API Key -->
         <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="" />
+        android:name="com.google.android.geo.API_KEY"
+        android:value="${MAPS_API_KEY}" />
 
         <activity
             android:name=".MainActivity"
